tests/snapshots/mermaid_layout_er__a_diagram_with_no_entities_at_all.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&diagram(Vec::new(), Vec::new()), 30)"
---

