tests/snapshots/mermaid_layout_er__a_non_identifying_relationship_is_drawn_dotted.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&chart, 60)"
---
┌────────┐                                                  
│ PARENT │                                                  
└────┬───┘                                                  
     ┼                                                      
     ┼                                                      
     ┊may have                                              
     ┊                                                      
     ○                                                      
     ∧                                                      
 ┌───────┐                                                  
 │ CHILD │                                                  
 └───────┘
