tests/snapshots/mermaid_layout_er__an_alias_is_shown_instead_of_the_entity_key.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&diagram(vec![named], Vec::new()), 50)"
---
               ┌──────────────────┐               
               │ Customer account │               
               ├──────────────────┤               
               │ string  name     │               
               └──────────────────┘
