tests/snapshots/mermaid_layout_er__an_entity_with_a_full_attribute_table.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&diagram(vec![customer], Vec::new()), 70)"
---
                  ┌───────────────────────────────┐                   
                  │           CUSTOMER            │                   
                  ├───────────────────────────────┤                   
                  │ string  id        PK          │                   
                  │ string  name                  │                   
                  │ string  email     UK  "login" │                   
                  │ int     regionId  FK          │                   
                  └───────────────────────────────┘
