tests/snapshots/mermaid_layout_er__an_entity_with_no_attributes.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&diagram(vec![entity(\"PLAIN\", Vec::new())], Vec::new()), 30)"
---
          ┌───────┐           
          │ PLAIN │           
          └───────┘
