tests/snapshots/mermaid_layout_er__cjk_attributes_keep_the_table_aligned.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&chart, 50)"
---
               ┌──────────────────┐               
               │       顧客       │               
               ├──────────────────┤               
               │ 文字列  名前  PK │               
               │ int     年齢     │               
               └──────────────────┘
