tests/snapshots/mermaid_layout_er__every_cardinality_combination.snap
---
source: tests/mermaid_layout_er.rs
assertion_line: 149
expression: "render(&diagram(entities, relationships), 100)"
---
                                                        ┌─────┐                                     
                                                        │ HUB │                                     
                                                        └┬┬─┬┬┘                                     
                                                         ┼┼ ∨∨                                      
                                                         ┼○ ┼○                                      
                      ╭──────────────────────────────────╯│╭╯╰───────────────╮                      
                      │                 ╭─────────────────╯│                 │                      
                      ○                 ┼                  ○                 ┼                      
                      ┼                 ┼                  ∧                 ∧                      
               ┌─────────────┐   ┌─────────────┐   ┌──────────────┐   ┌─────────────┐               
               │ ZERO_OR_ONE │   │ EXACTLY_ONE │   │ ZERO_OR_MORE │   │ ONE_OR_MORE │               
               └─────────────┘   └─────────────┘   └──────────────┘   └─────────────┘
