tests/snapshots/mermaid_layout_er__long_attribute_rows_are_elided_rather_than_overflowing.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&diagram(vec![wide], Vec::new()), 40)"
---
┌──────────────────────────────────────┐
│                 WIDE                 │
├──────────────────────────────────────┤
│ averyLongTypeNameIndeed  anEvenLong… │
└──────────────────────────────────────┘
