tests/snapshots/mermaid_layout_er__the_classic_customer_places_orders.snap
---
source: tests/mermaid_layout_er.rs
expression: "render(&chart, 70)"
---
┌──────────────────┐                                                  
│     CUSTOMER     │                                                  
├──────────────────┤                                                  
│ string  name  PK │                                                  
└─────────┬────────┘                                                  
          ┼                                                           
          ┼                                                           
          │places                                                     
          ○                                                           
          ∧                                                           
 ┌────────────────┐                                                   
 │     ORDER      │                                                   
 ├────────────────┤                                                   
 │ int  total  PK │                                                   
 └────────────────┘
